Enhance strict TypeScript config recipe with comprehensive error fixing
- Update metadata.yaml to require TypeScript projects and provide configured variable
- Enhance fix.md with detailed automatic error resolution strategies for all strict settings
- Add comprehensive guidance for type annotation, null handling, array access safety
- Include unused code cleanup and class inheritance fixes
- Follow proper recipe structure and format conventions

--- a/code-quality/strict-typescript-config/metadata.yaml
+++ b/code-quality/strict-typescript-config/metadata.yaml
@@ -10,6 +10,9 @@ ecosystems:
       - id: default
         fix_prompt: variants/javascript_default.md
 
-provides: []
+provides:
+  - strict-typescript-config.configured
 
-requires: []
+requires:
+  - key: project.language
+    equals: typescript
