--- a/code-quality/strict-typescript-config/metadata.yaml
+++ b/code-quality/strict-typescript-config/metadata.yaml
@@ -3,12 +3,7 @@ category: code-quality
 summary: Configure TypeScript with strictest compiler options to catch errors early and enforce best practices.
 level: project-only
 
-ecosystems:
-  - id: javascript
-    default_variant: default
-    variants:
-      - id: default
-        fix_prompt: variants/javascript_default.md
+ecosystems: []
 
 provides:
   - strict-typescript-config.configured
