Fix TypeScript recipe validation issues
## strict-typescript-config
- Remove redundant provides fields (configured, options_enabled) that duplicate .applied functionality
- Improve content separation by removing implementation hints from prompt.md
- Simplify fix.md while maintaining specific implementation guidance

## typescript-path-alias
- Add missing ecosystems field to metadata.yaml
- Remove multi-line code blocks from fix.md
- Improve Expected Output coverage with clear boolean description

Both recipes now pass validation and review with 0 violations using the enhanced
chorenzo review system that detects redundant provides fields based on principles.

--- a/code-quality/strict-typescript-config/metadata.yaml
+++ b/code-quality/strict-typescript-config/metadata.yaml
@@ -5,8 +5,7 @@ level: project-only
 
 ecosystems: []
 
-provides:
-  - strict-typescript-config.configured
+provides: []
 
 requires:
   - key: project.language
